examples/failing/semantics/join_deadlock.gm
join spawn { join 0; };